<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lila"
    tools:context=".activity_registro">

    <ImageView
        android:id="@+id/img_logo_registro"
        android:layout_width="213dp"
        android:layout_height="197dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/txt_Nombre_Registro"
        style="@style/EstiloTextosForlumarios"
        android:layout_width="254dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:hint="@string/nombre_registro"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo_registro" />

    <EditText
        android:id="@+id/txt_titulo_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lilita_one"
        android:hint="@string/titulo_registro"
        android:textColor="@color/morado"
        android:textSize="28sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.659"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo_registro" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="50dp"
        android:layout_height="58dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo_registro"
        app:srcCompat="@drawable/usuario" />

    <EditText
        android:id="@+id/txt_apellidos_registro"
        style="@style/EstiloTextosForlumarios"
        android:layout_width="254dp"
        android:layout_height="49dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:hint="@string/apellidos_registro"
        app:layout_constraintStart_toEndOf="@+id/imageView7"
        app:layout_constraintTop_toBottomOf="@+id/txt_Nombre_Registro" />

    <EditText
        android:id="@+id/txt_celular_registro"
        style="@style/EstiloTextosForlumarios"
        android:layout_width="255dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:hint="@string/celular_registro"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/txt_apellidos_registro" />

    <EditText
        android:id="@+id/txt_correo_registro"
        style="@style/EstiloTextosForlumarios"
        android:layout_width="251dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:hint="@string/correo_registro"
        app:layout_constraintStart_toEndOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/txt_celular_registro" />

    <EditText
        android:id="@+id/txt_contrasena_registro"
        style="@style/EstiloTextosForlumarios"
        android:layout_width="249dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:hint="@string/contrasena_registro"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toBottomOf="@+id/txt_correo_registro" />

    <include
        layout="@layout/text_made_by"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_registrar" />

    <Button
        android:id="@+id/btn_guardar_registro"
        style="@style/EstiloBotonesFormularios"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/guardar_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.553"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_contrasena_registro" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="46dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_apellidos_registro"
        app:srcCompat="@drawable/celular" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="45dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_correo_registro"
        app:srcCompat="@drawable/contrasena" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="43dp"
        android:layout_height="47dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_celular_registro"
        app:srcCompat="@drawable/correo" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="50dp"
        android:layout_height="54dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_Nombre_Registro"
        app:srcCompat="@drawable/usuario"
        tools:srcCompat="@drawable/apellido" />
</androidx.constraintlayout.widget.ConstraintLayout>