<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lila"
    tools:context=".activity_login_form">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="213dp"
        android:layout_height="197dp"
        android:layout_marginTop="68dp"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/img_icon_user"
        android:layout_width="66dp"
        android:layout_height="74dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="72dp"
        android:contentDescription="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo"
        app:srcCompat="@drawable/usuario" />

    <EditText
        android:id="@+id/txt_correo_login"
        android:layout_width="251dp"
        android:layout_height="65dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/estilos_celdas"
        android:ems="10"
        android:fontFamily="@font/quicksand_light"
        android:hint="@string/usuario_login"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/img_icon_user"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <ImageView
        android:id="@+id/img_icon_contra"
        android:layout_width="58dp"
        android:layout_height="54dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_icon_user"
        app:srcCompat="@drawable/contrasena" />

    <EditText
        android:id="@+id/txt_contrasena"
        android:layout_width="248dp"
        android:layout_height="63dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/estilos_celdas"
        android:ems="10"
        android:fontFamily="@font/quicksand_light"
        android:hint="@string/contrasena_login"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/img_icon_contra"
        app:layout_constraintTop_toBottomOf="@+id/txt_correo_login" />

    <Button
        android:id="@+id/btn_enviar"
        android:layout_width="119dp"
        android:layout_height="64dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/beige"
        android:contentDescription="@null"
        android:text="@string/enviar_login"
        android:textColor="@color/magenta"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_contrasena" />

    <TextView
        android:id="@+id/txt_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lilita_one"
        android:text="@string/Registrar_login"
        android:textAllCaps="false"
        android:textColor="@color/morado"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_enviar" />

    <include
        layout="@layout/text_made_by"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_registrar" />

</androidx.constraintlayout.widget.ConstraintLayout>